# GoIT_Team_3_WEB

./: .env_my  .gitignore  README.md  config.py  main.py  pyproject.toml
app/database/models/: __init__.py  images.py  (+5 more)
app/models/: image.py  user.py
app/repository/: comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
app/routes/: __init__.py  auth.py  comments.py  image_comments.py  image_formats.py  image_ratings.py  images.py  tags.py  users.py
app/schemas/: comment.py  image.py  image_comments.py  image_formats.py  image_raitings.py  tag.py  user.py
app/services/: auth.py  cloudinary.py  email.py  image_ratings.py  qr_code.py
app/utilities/: filter.py
app/utils/: filter.py
migrations/: env.py
migrations/versions/: 0fdb7aa8044a_imageіs5.py  0fe8d246ce21_teble_user_update_email_verified.py  121f6007e492_table_user_add_updated_at.py  15748548c002_rating.py  63c1abcc9413_imageіs4.py  6e57462c056c_init.py  78414e6f264c_imageіs3.py  794dbbec0028_comments.py  816e0784082a_init.py  859f79bd5f9e_imageі2.py  b921f124b326_init.py  c21dee053e7f_init.py  c734b04dd21a_tags.py  d70d25a61332_init.py  d7d4d3fba71d_images6.py  de5687d1a9dc_update_tablename_comments_to_image_.py  f0d769abcad5_images5.py
src/database/: connect.py  models.py
src/repository/: users.py
src/routes/: auth.py  users.py
src/services/: auth.py
src/shemas/: users.py
tests/: conftest.py  test_rote_root.py  test_route_auth.py  test_route_images.py  test_route_users.py  test_routes_comments.py  test_unit_repository_comments.py  test_unit_repository_images.py
(+4 files in other folders)
